# Lebo-mDNS-Client

./: CMakeLists.txt  README.MD
esp32/: CMakeLists.txt  idf_component.yml  mdns_demo_main.cpp  sdkconfig
esp32/main/: mdns_demo_main.cpp
esp32/main/mdns/: mdns_discovery.cc
esp32/main/wifi/: WiFiManager.cpp  WiFiManager.hpp
esp32/mdns/: mdns_discovery.cc  mdns_discovery.h
include/: device_discovery.h
pc/: README.MD
pc/include/: logger.h
pc/src/: main.cpp
src/: device_discovery.cpp  main.cpp  mdns_browser.cpp  mdns_browser.h
third/dns_sd/include/: dns_sd.h
third/dns_sd/lib/windows/: dnssd.lib
